<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/postLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16sdp">

        <!--Post Detail-->
        <RelativeLayout
            android:id="@+id/postDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@android:drawable/progress_horizontal"
                app:shapeAppearanceOverlay="@style/CircleImageView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_toEndOf="@+id/profileImage"
                android:letterSpacing="0.02"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </RelativeLayout>

        <!--Post View-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/postImageCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:maxHeight="@dimen/_400sdp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/_12sdp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/mediaViewPager"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mediaCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:drawable/progress_horizontal"
                android:padding="8dp"
                android:text="1/1"
                android:textColor="@color/white"
                android:visibility="visible" />
        </com.google.android.material.card.MaterialCardView>

        <!--Users View-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/likePost"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_unliked" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/countLike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center"
                android:padding="@dimen/_1sdp"
                android:text="@string/count"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/likesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:text="@string/likes"
                android:textColor="@color/sub_text"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="start"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:text="@string/post_caption_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sendPostTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:letterSpacing="0.02"
            android:text="@string/day_ago"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/_9ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/btn_stroke" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>